Bug 15313 - large directory optimization broken for non-lcomp path elements
Summary: large directory optimization broken for non-lcomp path elements
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.17.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-17 15:13 UTC by Volker Lendecke
Modified: 2023-05-11 07:10 UTC (History)
2 users (show)

See Also:


Attachments
Patch for 4.18 (4.93 KB, text/plain)
2023-02-24 09:02 UTC, Volker Lendecke
slow: review+
Details
Patch for 4.17 (1.18 KB, text/plain)
2023-02-24 09:04 UTC, Volker Lendecke
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2023-02-17 15:13:21 UTC
have patch, need bugnumber
Comment 1 Samba QA Contact 2023-02-24 08:47:03 UTC
This bug was referenced in samba master:

a9301d8f2956409a6d36e7776d0237d03bfbdbf6
342d8f6a0a8bc2229332783a840c882f85a1dd4e
bf9130d375b6c401bb79fc1a0911975814759e3b
Comment 2 Volker Lendecke 2023-02-24 09:02:29 UTC
Created attachment 17774 [details]
Patch for 4.18
Comment 3 Volker Lendecke 2023-02-24 09:04:00 UTC
Created attachment 17775 [details]
Patch for 4.17

Our python test code has changed, so backporting the tests is a bit more effort. For this bugfix in 4.17 I skipped the tests. If tests are required in the backport, please tell me, I'll work on that then.
Comment 4 Ralph Böhme 2023-04-11 13:33:13 UTC
Reassigning to Jule for inclusion in 4.17 and 4.18.
Comment 5 Jule Anger 2023-04-11 15:08:52 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 6 Samba QA Contact 2023-04-11 16:29:12 UTC
This bug was referenced in samba v4-17-test:

d8fa74a176ef6078075865479157b5560d0f66cf
Comment 7 Samba QA Contact 2023-04-11 16:31:11 UTC
This bug was referenced in samba v4-18-test:

9af15e1737f2ec4e3096ad8d6aebabe4b3c31a8c
da3531910d7823bb46fbbb9ea5100d8b093a3cc0
31d4b337cb70203eac3032838a78c9c6ef48bf6e
Comment 8 Jule Anger 2023-04-14 12:14:02 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2023-04-19 10:23:08 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.2):

9af15e1737f2ec4e3096ad8d6aebabe4b3c31a8c
da3531910d7823bb46fbbb9ea5100d8b093a3cc0
31d4b337cb70203eac3032838a78c9c6ef48bf6e
Comment 10 Samba QA Contact 2023-05-11 07:10:15 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.8):

d8fa74a176ef6078075865479157b5560d0f66cf